# NetTools

./: .gitignore  INSTALACAO.md  PROJETO_CONCLUIDO.md  README.md  build.bat  build.sh  main.py  pyproject.toml  requirements.txt  run_nettools.bat  test_nettools.py
src/: __init__.py
src/core/: __init__.py
src/ui/: dashboard.py  dns_analyzer.py  interface_monitor.py  main_window.py  ping_tool.py  speed_test.py  subnet_validator.py
src/utils/: theme.py
